--- a/environment.yml
+++ b/environment.yml
@@ -4,5 +4,5 @@ channels:
   - conda-forge
   - bioconda
 dependencies:
-  - python
-  - bioconda::snakemake-minimal
+  - python=3.9.4
+  - bioconda::snakemake-minimal=6.2.1
