--- a/environment.yml
+++ b/environment.yml
@@ -9,4 +9,6 @@ dependencies:
   # Otherwise, snakemake throws an error (see https://git.io/JRckv)
   - conda-forge::smart_open=3
   - conda-forge::mne=0.23.0
-  - conda-forge::autoreject
+  - conda-forge::autoreject=0.2.2
+  # Only necessary because of a bug in autoreject 0.2.2 (see https://git.io/J46B9)
+  - scikit-learn=0.23
