--- a/environment.yml
+++ b/environment.yml
@@ -12,5 +12,5 @@ dependencies:
   - conda-forge::autoreject=0.2.2
   # Only necessary because of a bug in autoreject 0.2.2 (see https://git.io/J46B9)
   - scikit-learn=0.23
-  - conda-forge::r-base
-  - conda-forge::r-rmarkdown
+  - conda-forge::r-base=4.1.1
+  - conda-forge::r-rmarkdown=2.10
