added rule graph
Had to install graphviz for that.

snakemake --rulegraph | dot -Tpng > rulegraph.png

--- a/environment.yml
+++ b/environment.yml
@@ -15,3 +15,5 @@ dependencies:
   - conda-forge::r-base=4.1.1
   - conda-forge::r-rmarkdown=2.10
   - conda-forge::r-rjson=0.2.20
+  # To plot the Snakemake rule graph
+  - conda-forge::graphviz=2.38.0
