--- a/environment-full.yml
+++ b/environment-full.yml
@@ -1,48 +1,54 @@
-name: reproduction_clean
+name: reproduction37
 channels:
   - bioconda
   - conda-forge
   - defaults
 dependencies:
   - _r-mutex=1.0.0=anacondar_1
-  - aiohttp=3.7.4.post0=py39h2bbff1b_2
+  - aiohttp=3.7.4.post0=py37h2bbff1b_2
   - amply=0.1.4=py_0
   - appdirs=1.4.4=pyhd3eb1b0_0
   - apptools=5.1.0=pyhd3eb1b0_0
-  - async-timeout=3.0.1=py39haa95532_0
+  - async-timeout=3.0.1=py37haa95532_0
   - attrs=21.2.0=pyhd3eb1b0_0
   - autoreject=0.2.2=pyhd8ed1ab_0
   - blas=1.0=mkl
   - blosc=1.21.0=h19a0ad4_0
-  - boto=2.49.0=py39haa95532_0
+  - boto=2.49.0=py37_0
   - boto3=1.18.21=pyhd3eb1b0_0
   - botocore=1.21.21=pyhd3eb1b0_1
-  - bottleneck=1.3.2=py39h7cc1a96_1
+  - bottleneck=1.3.2=py37h2a96729_1
   - brotli=1.0.9=ha925a31_2
-  - brotlipy=0.7.0=py39h2bbff1b_1003
-  - bz2file=0.98=py39haa95532_1
+  - brotlipy=0.7.0=py37h2bbff1b_1003
+  - bz2file=0.98=py37haa95532_1
   - bzip2=1.0.8=he774522_0
   - ca-certificates=2021.7.5=haa95532_1
   - cached-property=1.5.2=py_0
   - cachetools=4.2.2=pyhd3eb1b0_0
-  - certifi=2021.5.30=py39haa95532_0
-  - cffi=1.14.6=py39h2bbff1b_0
-  - cftime=1.5.0=py39h080aedc_0
-  - chardet=4.0.0=py39haa95532_1003
+  - certifi=2021.5.30=py37haa95532_0
+  - cffi=1.14.6=py37h2bbff1b_0
+  - cftime=1.5.0=py37h080aedc_0
+  - chardet=4.0.0=py37haa95532_1003
   - charset-normalizer=2.0.4=pyhd3eb1b0_0
+  - cloudpickle=2.0.0=pyhd3eb1b0_0
   - colorama=0.4.4=pyhd3eb1b0_0
   - configargparse=1.4=pyhd3eb1b0_0
-  - configobj=5.0.6=py39haa95532_1
-  - coverage=5.5=py39h2bbff1b_2
-  - cryptography=3.4.7=py39h71e12ea_0
+  - configobj=5.0.6=py37haa95532_1
+  - coverage=5.5=py37h2bbff1b_2
+  - cryptography=3.4.7=py37h71e12ea_0
   - curl=7.78.0=h86230a5_0
-  - cycler=0.10.0=py39haa95532_0
-  - cython=0.29.24=py39hd77b12b_0
-  - datrie=0.8.2=py39h2bbff1b_0
+  - cvxpy=1.1.15=py37h03978a9_0
+  - cvxpy-base=1.1.15=py37h9386db6_0
+  - cycler=0.10.0=py37_0
+  - cython=0.29.24=py37hd77b12b_0
+  - cytoolz=0.11.0=py37he774522_0
+  - dask-core=2021.8.1=pyhd3eb1b0_0
+  - datrie=0.8.2=py37h2bbff1b_0
   - deprecated=1.2.12=pyhd3eb1b0_0
-  - dipy=1.2.0=py39hb0a1f21_1
-  - docutils=0.17.1=py39haa95532_1
+  - dipy=1.4.1=py37h6ab8d49_0
+  - docutils=0.17.1=py37haa95532_1
   - double-conversion=3.1.5=ha925a31_1
+  - ecos=2.0.7.post1=py37h080aedc_0
   - eigen=3.3.7=h74a9793_0
   - envisage=6.0.1=pyhd3eb1b0_0
   - expat=2.4.1=h6c2663c_2
@@ -50,6 +56,7 @@ dependencies:
   - filelock=3.0.12=pyhd3eb1b0_1
   - fonttools=4.25.0=pyhd3eb1b0_0
   - freetype=2.10.4=hd328e21_0
+  - fsspec=2021.8.1=pyhd3eb1b0_0
   - gitdb=4.0.7=pyhd3eb1b0_0
   - gitpython=3.1.18=pyhd3eb1b0_1
   - gl2ps=1.4.2=h0597ee9_0
@@ -58,12 +65,13 @@ dependencies:
   - google-api-core=1.25.1=pyhd3eb1b0_0
   - google-auth=1.33.0=pyhd3eb1b0_0
   - google-cloud-core=1.7.1=pyhd3eb1b0_0
-  - google-cloud-storage=1.31.0=py_0
-  - google-crc32c=1.1.2=py39h2bbff1b_0
+  - google-cloud-storage=1.41.0=pyhd3eb1b0_0
+  - google-crc32c=1.1.2=py37h2bbff1b_0
   - google-resumable-media=1.3.1=pyhd3eb1b0_1
-  - googleapis-common-protos=1.53.0=py39h2eaa2aa_0
-  - grpcio=1.36.1=py39hc60d5dd_1
-  - h5py=3.2.1=py39h3de5c98_0
+  - googleapis-common-protos=1.53.0=py37h2eaa2aa_0
+  - graphviz=2.38.0=h6538335_1011
+  - grpcio=1.36.1=py37hc60d5dd_1
+  - h5py=3.2.1=py37h3de5c98_0
   - hdf4=4.2.13=h712560f_2
   - hdf5=1.10.6=nompi_h5268f04_1114
   - icc_rt=2019.0.0=h0cc432a_1
@@ -71,17 +79,17 @@ dependencies:
   - idna=3.2=pyhd3eb1b0_0
   - imageio=2.9.0=pyhd3eb1b0_0
   - imageio-ffmpeg=0.4.5=pyhd8ed1ab_0
-  - importlib-metadata=4.8.1=py39haa95532_0
+  - importlib-metadata=4.8.1=py37haa95532_0
   - importlib_metadata=4.8.1=hd3eb1b0_0
   - intel-openmp=2021.3.0=haa95532_3372
   - ipython_genutils=0.2.0=pyhd3eb1b0_1
   - jmespath=0.10.0=pyhd3eb1b0_0
   - joblib=1.0.1=pyhd3eb1b0_0
   - jpeg=9d=h2bbff1b_0
-  - jsoncpp=1.9.4=h59b6b97_2
+  - jsoncpp=1.8.4=h74a9793_0
   - jsonschema=3.2.0=pyhd3eb1b0_2
-  - jupyter_core=4.7.1=py39haa95532_0
-  - kiwisolver=1.3.1=py39hd77b12b_0
+  - jupyter_core=4.7.1=py37haa95532_0
+  - kiwisolver=1.3.1=py37hd77b12b_0
   - krb5=1.19.2=h5b6d351_0
   - libblas=3.8.0=20_mkl
   - libclang=11.1.0=default_h5c34c98_1
@@ -99,9 +107,9 @@ dependencies:
   - libtiff=4.2.0=hd0e1b90_0
   - libxml2=2.9.12=h0ad7f3c_0
   - llvm-meta=5.0.0=0
-  - loguru=0.5.3=py39hcbf5309_2
-  - lz4-c=1.9.3=h2bbff1b_1
-  - lzo=2.10=he774522_2
+  - locket=0.2.1=py37haa95532_1
+  - loguru=0.5.3=py37h03978a9_2
+  - lz4-c=1.9.2=hf4a77e7_3
   - m2w64-bwidget=1.9.10=2
   - m2w64-bzip2=1.0.6=6
   - m2w64-expat=2.1.1=2
@@ -133,67 +141,73 @@ dependencies:
   - m2w64-wineditline=2.101=5
   - m2w64-xz=5.2.2=2
   - m2w64-zlib=1.2.8=10
-  - matplotlib-base=3.4.2=py39h49ac443_0
-  - mayavi=4.7.2=py39hc2506ef_4
+  - matplotlib=3.4.2=py37haa95532_0
+  - matplotlib-base=3.4.2=py37h49ac443_0
+  - mayavi=4.7.2=py37h9e3c1ee_4
   - meshio=4.4.6=pyhd8ed1ab_0
   - mffpy=0.6.3=pyhd8ed1ab_0
   - mkl=2020.2=256
-  - mkl-service=2.3.0=py39h196d8e1_0
-  - mkl_fft=1.3.0=py39h46781fe_0
-  - mkl_random=1.0.2=py39h848d8c7_0
+  - mkl-service=2.3.0=py37h196d8e1_0
+  - mkl_fft=1.3.0=py37h46781fe_0
+  - mkl_random=1.1.1=py37h47e9c7a_0
   - mne=0.23.0=pyhd8ed1ab_0
   - mock=4.0.3=pyhd3eb1b0_0
   - msys2-conda-epoch=20160418=1
-  - multidict=5.1.0=py39h2bbff1b_2
+  - multidict=5.1.0=py37h2bbff1b_2
   - munkres=1.1.4=py_0
   - nbformat=5.1.3=pyhd3eb1b0_0
-  - netcdf4=1.5.4=nompi_py39h87c5a86_103
+  - netcdf4=1.5.6=nompi_py37hf61131d_102
+  - networkx=2.6.2=pyhd3eb1b0_0
   - nibabel=3.2.1=pyhd8ed1ab_0
   - nilearn=0.8.1=pyhd8ed1ab_0
-  - numexpr=2.7.3=py39hcbcaa1e_0
-  - numpy=1.19.2=py39h729668d_0
-  - numpy-base=1.19.2=py39hbd0edd7_0
-  - olefile=0.46=pyhd3eb1b0_0
+  - numexpr=2.7.3=py37hcbcaa1e_0
+  - numpy=1.19.2=py37hadc3359_0
+  - numpy-base=1.19.2=py37ha3acd2a_0
+  - olefile=0.46=py37_0
   - openmp=5.0.0=vc14_1
   - openssl=1.1.1l=h2bbff1b_0
+  - osqp=0.6.2=py37h9386db6_2
   - packaging=21.0=pyhd3eb1b0_0
-  - pandas=1.3.2=py39h6214cd6_0
+  - pandas=1.3.3=py37h6214cd6_0
   - pandoc=2.12=haa95532_0
-  - patsy=0.5.1=py39haa95532_0
-  - pillow=8.3.1=py39h4fa10fc_0
-  - pip=21.2.4=py38haa95532_0
-  - proj=7.2.0=h1cfcee9_2
-  - protobuf=3.17.2=py39hd77b12b_0
-  - psutil=5.8.0=py39h2bbff1b_1
-  - pugixml=1.11.4=h0e60522_0
-  - pulp=2.5.0=py39hcbf5309_0
+  - partd=1.2.0=pyhd3eb1b0_0
+  - patsy=0.5.1=py37_0
+  - pillow=8.3.1=py37h4fa10fc_0
+  - pip=21.2.2=py37haa95532_0
+  - proj=7.0.0=hf5a9257_1
+  - protobuf=3.17.2=py37hd77b12b_0
+  - psutil=5.8.0=py37h2bbff1b_1
+  - pugixml=1.10=ha925a31_1
+  - pulp=2.5.0=py37h03978a9_0
   - pyasn1=0.4.8=pyhd3eb1b0_0
   - pyasn1-modules=0.2.8=py_0
   - pycparser=2.20=py_2
-  - pydicom=2.2.1=pyh6c4a22f_0
-  - pyface=7.3.0=py39haa95532_1
+  - pydicom=2.2.2=pyh6c4a22f_0
+  - pyface=7.3.0=py37haa95532_1
   - pygments=2.10.0=pyhd3eb1b0_0
   - pyopenssl=20.0.1=pyhd3eb1b0_1
   - pyparsing=2.4.7=pyhd3eb1b0_0
-  - pyqt=5.12.3=py39hcbf5309_7
-  - pyqt-impl=5.12.3=py39h415ef7b_7
-  - pyqt5-sip=4.19.18=py39h415ef7b_7
-  - pyqtchart=5.12=py39h415ef7b_7
-  - pyqtwebengine=5.12.1=py39h415ef7b_7
-  - pyreadline=2.1=py39haa95532_1
-  - pyrsistent=0.18.0=py39h2bbff1b_0
-  - pysocks=1.7.1=py39haa95532_0
+  - pyqt=5.12.3=py37h03978a9_7
+  - pyqt-impl=5.12.3=py37hf2a7229_7
+  - pyqt5-sip=4.19.18=py37hf2a7229_7
+  - pyqtchart=5.12=py37hf2a7229_7
+  - pyqtwebengine=5.12.1=py37hf2a7229_7
+  - pyreadline=2.1=py37_1
+  - pyrsistent=0.17.3=py37he774522_0
+  - pysocks=1.7.1=py37_1
   - pysurfer=0.11.0=py_0
-  - pytables=3.6.1=py39h56d22b6_1
-  - python=3.9.4=h6244533_0
+  - pytables=3.6.1=py37hdc91d43_3
+  - python=3.7.11=h6244533_0
   - python-dateutil=2.8.2=pyhd3eb1b0_0
   - python-picard=0.6=pyh8a188c0_0
-  - python_abi=3.9=2_cp39
+  - python_abi=3.7=2_cp37m
   - pytz=2021.1=pyhd3eb1b0_0
   - pyvista=0.32.1=pyhd8ed1ab_0
   - pyvistaqt=0.5.0=pyhd8ed1ab_0
-  - pywin32=228=py39hbaba5e8_1
-  - pyyaml=5.4.1=py39h2bbff1b_1
+  - pywavelets=1.1.1=py37he774522_2
+  - pywin32=228=py37hbaba5e8_1
+  - pyyaml=5.4.1=py37h2bbff1b_1
+  - qdldl-python=0.1.5=py37h9386db6_1
   - qt=5.12.9=h5909a2a_4
   - qtpy=1.10.0=pyhd3eb1b0_0
   - r-base=4.1.1=hddad469_1
@@ -212,7 +226,7 @@ dependencies:
   - r-rjson=0.2.20=r41ha856d6a_1002
   - r-rlang=0.4.11=r41h6d2157b_0
   - r-rmarkdown=2.10=r41hc72bb7e_0
-  - r-stringi=1.7.4=r41ha856d6a_0
+  - r-stringi=1.7.5=r41ha856d6a_0
   - r-stringr=1.4.0=r41hc72bb7e_2
   - r-tinytex=0.34=r41hc72bb7e_0
   - r-xfun=0.26=r41ha856d6a_0
@@ -221,45 +235,47 @@ dependencies:
   - requests=2.26.0=pyhd3eb1b0_0
   - rsa=4.7.2=pyhd3eb1b0_1
   - s3transfer=0.5.0=pyhd3eb1b0_0
-  - scikit-learn=0.23.2=py39hf11a4ad_0
-  - scipy=1.6.2=py39h14eb087_0
+  - scikit-image=0.16.2=py37h47e9c7a_0
+  - scikit-learn=0.23.2=py37h47e9c7a_0
+  - scipy=1.6.2=py37h14eb087_0
   - scooby=0.5.7=pyhd8ed1ab_0
-  - setuptools=58.0.4=py39haa95532_0
+  - scs=2.1.4=py37hd9fb7ff_0
+  - setuptools=58.0.4=py37haa95532_0
   - six=1.16.0=pyhd3eb1b0_0
   - smart_open=3.0.0=pyh9f0ad1d_0
   - smmap=4.0.0=pyhd3eb1b0_0
   - snakemake-minimal=6.2.1=pyhdfd78af_0
   - sqlite=3.36.0=h2bbff1b_0
-  - statsmodels=0.12.2=py39h2bbff1b_0
+  - statsmodels=0.12.2=py37h2bbff1b_0
   - stopit=1.1.2=py_0
   - tbb=2020.3=h74a9793_0
   - tbb-devel=2020.3=h74a9793_0
   - threadpoolctl=2.2.0=pyh0d69192_0
   - tk=8.6.11=h2bbff1b_0
+  - toolz=0.11.1=pyhd3eb1b0_0
   - toposort=1.7=pyhd8ed1ab_0
-  - tornado=6.1=py39h2bbff1b_0
+  - tornado=6.1=py37h2bbff1b_0
   - tqdm=4.62.2=pyhd3eb1b0_1
   - traitlets=5.1.0=pyhd3eb1b0_0
-  - traits=6.2.0=py39h2bbff1b_0
+  - traits=6.2.0=py37h2bbff1b_0
   - traitsui=7.2.1=pyhd3eb1b0_0
   - typing-extensions=3.10.0.2=hd3eb1b0_0
   - typing_extensions=3.10.0.2=pyh06a4308_0
-  - tzdata=2021a=h5d7bf9c_0
   - urllib3=1.26.6=pyhd3eb1b0_1
   - utfcpp=3.2.1=h57928b3_0
   - vc=14.2=h21ff451_1
   - vs2015_runtime=14.27.29016=h5e58377_2
-  - vtk=9.0.1=no_osmesa_py39h53280bc_106
+  - vtk=9.0.1=no_osmesa_py37h35f1388_100
   - wheel=0.37.0=pyhd3eb1b0_1
   - win32_setctime=1.0.3=py_0
-  - win_inet_pton=1.1.0=py39haa95532_0
-  - wincertstore=0.2=py39h2bbff1b_0
-  - wrapt=1.12.1=py39h196d8e1_1
+  - win_inet_pton=1.1.0=py37haa95532_0
+  - wincertstore=0.2=py37haa95532_2
+  - wrapt=1.12.1=py37he774522_1
   - xlrd=2.0.1=pyhd3eb1b0_0
   - xz=5.2.5=h62dcd97_0
   - yaml=0.2.5=he774522_0
-  - yarl=1.6.3=py39h2bbff1b_0
+  - yarl=1.5.1=py37he774522_0
   - zipp=3.5.0=pyhd3eb1b0_0
   - zlib=1.2.11=h62dcd97_4
-  - zstd=1.4.9=h19a0ad4_0
-prefix: E:\Evgenii_Kalenkovich\programs\miniminiconda3\envs\reproduction_clean
+  - zstd=1.4.5=h04227a9_0
+prefix: E:\Evgenii_Kalenkovich\programs\miniminiconda3\envs\reproduction37
